2001-09-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el: Updated documents.

	* texi/gnus-ja.texi (Namazu Groups): New subsection.

2001-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-namazu.el: Autoload "regexp-opt" for Mule 2.3.

	* Mule23@1934.en, Mule23@1934.ja: To install contrib/regexp-opt.el
	is required.

	* contrib/regexp-opt.el: Imported from Emacs 20.2.

	* lisp/gnus-bbdb.el (gnus-bbdb/pop-up-bbdb-buffer): Use
	`bbdb-display-layout' or `bbdb-pop-up-display-layout' instead of
	`bbdb-elided-display' or `bbdb-pop-up-elided-display' when BBDB
	v2.33 or later is running.

2001-09-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (top): Not require `std11'.
	(gnus-namazu/get-current-from): Use
	`mail-extract-address-components' instead of
	`std11-extract-address-components'.

	* lisp/gnus-namazu.el: New file.

	* lisp/gnus.el (top): Add autoload of `gnus-namazu-search'.

	* lisp/gnus-sum.el (gnus-summary-mode-map): Define "\C-c\C-n" as
	`gnus-namazu-search'.

	* lisp/gnus-group.el (gnus-group-mode-map): Define "\C-c\C-n" as
	`gnus-namazu-search', and removed `gnus-group-make-shimbun-group'.

2001-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-xmas.el (gnus-tilde-pad-form): Abolished.  Use the
	new function `gnus-correct-pad-form' instead.
	* lisp/gnus-spec.el (gnus-tilde-pad-form): Ditto.

2001-09-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnir.el (nnir-run-namazu): Fix a side effect when handling
	of process environments.

2001-09-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnir.el (top): Added code to avoid byte-compile warning
	about `nnimap-server-buffer'.
	(nnir-run-namazu): Disable locale of Namazu.

2001-09-04  KOSEKI Yoshinori  <kose@meadowy.org>

	* lisp/nnir.el (gnus-group-mode-hook): Fix typo.

2001-09-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnir.el (top): Don't call `nnir-group-mode-hook' in T-gnus.
