@@ -1,3 +1,9 @@
+2001-09-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* lisp/gnus-art.el (gnus-request-article-this-buffer): Copy an
+	article from `gnus-original-article-buffer' to
+	`gnus-article-buffer'.
+
 2001-09-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* lisp/gnus-namazu.el: Updated documents.
